# tesseract

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
backend/: CMakeLists.txt
backend/include/backend/: command.hpp  commandDispatcher.hpp  commandManager.hpp  commandRepository.hpp  coreCommands.hpp  observerProxies.hpp
backend/src/: command.cpp  commandDispatcher.cpp  commandManager.cpp  commandRepository.cpp  coreCommands.cpp  observerProxies.cpp
cmake/Modules/: ColourSupport.cmake  FindQGLViewer.cmake
extLibs/: CMakeLists.txt
gui/: CMakeLists.txt
gui/include/gui/: admaDrawer.hpp  application.hpp  canvas.hpp  commandButton.hpp  controlWidget.hpp  currentState.hpp  imageWidget.hpp  lidarPoint.hpp  mainWindow.hpp  originAxisDrawer.hpp  radarVoxel.hpp  splitter.hpp  zoomWidget.hpp
gui/src/: admaDrawer.cpp  application.cpp  canvas.cpp  commandButton.cpp  controlWidget.cpp  currentState.cpp  imageModel.cpp  imageWidget.cpp  lidarPoint.cpp  mainWindow.cpp  originAxisDrawer.cpp  radarVoxel.cpp  splitter.cpp  zoomWidget.cpp
models/: CMakeLists.txt
models/include/models/: admaModel.hpp  imageModel.hpp  lidarModel.hpp  radarModel.hpp  sensorModels.hpp  stereoModel.hpp
models/src/: admaModel.cpp  imageModel.cpp  lidarModel.cpp  radarModel.cpp  sensorModels.cpp  stereoModel.cpp
utilities/: CMakeLists.txt
utilities/include/utilities/: annotations.hpp  archiver.hpp  auxiliary.inl  dataHandler.hpp  egoVehicle.hpp  exception.hpp  observer.hpp  publisher.hpp  subdirectoryHandler.hpp  task.hpp  typeErasure.hpp  userInterface.hpp
utilities/src/: annotations.cpp  archiver.cpp  dataHandler.cpp  egoVehicle.cpp  exception.cpp  imageModel.cpp  observer.cpp  publisher.cpp  radarModel.cpp  subdirectoryHandler.cpp  task.cpp  typeErasure.cpp  userInterface.cpp
